add count function

--- a/ToDoList/Views/Categories/Show.cshtml
+++ b/ToDoList/Views/Categories/Show.cshtml
@@ -3,46 +3,56 @@
 <head>
   <link rel='stylesheet' href='https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css'>
 
-  <link rel='stylesheet' href='~/css/styles.css'>
+
 </head>
 
-<body>
+<center><body>
+  <div class="jumbotron">
 
 
   <h3>Here are all of the items in this category:</h3>
 
-  <ol>
+
     @foreach (var item in @Model["items"])
     {
-    <li>
-      <a href='/categories/@Model["category"].GetId()/items/@item.GetId()'>
-        @item.GetDescription() @item.GetDueDate()
-      </a>
-    </li>
-    <form action='/categories/@Model["category"].GetId()/items/@item.GetId()/deleteitem' method="post">
+      <div class="card">
+        <div class="card-header">
+        <a href='/categories/@Model["category"].GetId()/items/@item.GetId()'>
+          @item.GetDescription()
+        </a>
 
-      <button type="submit" name="button">Delete item</button>
-    </form>
+        </div>
+        <div class="card-body">
+          <h5 class="card-title">  <a href='/categories/@Model["category"].GetId()/items/@item.GetId()'>
+           @item.GetDueDate()
+            </a>
+</h5>
 
-    <a href='/categories/@Model["category"].GetId()/items/@item.GetId()/edit'>Edit this item</a>
+        <form action='/categories/@Model["category"].GetId()/items/@item.GetId()/deleteitem' method="post">
+
+            <button type="submit" name="button">Delete item</button>
+          </form>
+            <button type="submit" name="button">  <a href='/categories/@Model["category"].GetId()/items/@item.GetId()/edit'>Edit this item</a></button>
+        </div>
+      </div>
+
+
+
+
+
     }
-  </ol>
 
-  <p><a href='/categories/@Model["category"].GetId()/items/new'>Add a new item</a></p>
-
-  <p><a href='/categories/@Model["category"].GetId()/itemssort'>Sort by duedate</a></p>
-
-  <p><a href='/categories'>Return to category list</a></p>
-  <p><a href='/'>Return to Main Page</a></p>
-  <div class="col-md-12 mb-4">
-
-    <button type="button" class="btn peach-gradient btn-rounded">Primary</button>
-    <button type="button" class="btn blue-gradient btn-rounded">Default</button>
-    <button type="button" class="btn purple-gradient btn-rounded">Secondary</button>
-
-  </div>
+    <button type="button" class="btn btn-warning btn-sm btn-block"><a href='/categories/@Model["category"].GetId()/items/new'>Add a new item</a></button>
+<button type="button" class="btn btn-info btn-sm btn-block"><a href='/categories/@Model["category"].GetId()/itemssort'>Sort by duedate</a></button>
+<button type="button" class="btn btn-success btn-sm btn-block"><a href='/categories'>Return to category list</a></button>
+<button type="button" class="btn btn-danger btn-sm btn-block"><a href='/'>Return to Main Page</a></button>
 
 
+
+
+
+
+</div>
 </body>
-
+</center>
 </html>
